--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ dist
 dist-ssr
 *.local
 
+.vscode
+
 # Editor directories and files
 .vscode/*
-!.vscode/extensions.json
+#!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
