--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.3.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "blueimp-md5": "^2.19.0",
     "bootstrap": "3",
